Changes Since beta 0.0.3
- Option to change the background when the Pin is prompted for

v1.0.0
- Initial Version