@@ -4,16 +4,18 @@
 		<setting id="pinValue" type="text" visible="false" option="hidden" label="Pin Value" default="" />
 		<setting id="pinValueSet" type="bool" visible="false" option="hidden" label="Pin Value Set" default="false" />
 		<setting id="pinWarning" enable="false" visible="eq(-1,false)" type="text" label="32008" default="" />
-
 		<setting id="pinLength" label="32006" type="slider" default="4" range="1,1,10" option="int" />
 		<setting id="invalidPinNotificationType" label="32009" type="enum" lvalues="32010|32011|32012" default="0" />
-
     	<setting label="32005" type="lsep"/>
 		<setting label="32007" type="action" option="close" action="RunScript($CWD/setpin.py)"/>
 		<setting label="32114" type="action" option="close" action="RunAddon(script.pinsentry)"/>
 		<setting label="32113" type="action" action="RunScript($CWD/cleanup.py)"/>
 	</category>
-
+	<category label="32125">
+		<setting id="activityVideoPlaying" type="bool" label="32126" default="true" />
+		<setting id="activityNavigation" type="bool" label="32127" default="true" />
+		<setting id="activityPlugins" type="bool" label="32128" default="true" />
+	</category>
 	<category label="32115">
 		<setting id="pinCachingEnabled" type="bool" label="32119" default="false" />
 		<setting id="background" type="enum" label="32120" lvalues="32012|32121|32122|32123" default="0"/>
@@ -21,7 +23,6 @@
 		<setting id="timeRestrictionEnabled" type="bool" label="32116" default="false" />
 		<setting id="startTime" visible="eq(-1,true)" type="time" label="32117" default="06:00"/>
 		<setting id="endTime" visible="eq(-2,true)" type="time" label="32118" default="20:00"/>
-
     	<setting label="32003" type="lsep"/>
 		<setting id="logEnabled" type="bool" label="32004" default="false"/>
 	</category>
